fix(drop zone): fix IE11 layout problem with label (#4578)
* bug(drop zone): fix IE11 layout problem with label

* fix(drop zone): small change to spark new build for VRT

--- a/ui/components/drop-zone/base/_index.scss
+++ b/ui/components/drop-zone/base/_index.scss
@@ -64,6 +64,10 @@
     opacity: 0;
     background: $color-background-brand-primary;
   }
+
+  .slds-media__body {
+    flex-basis: auto; // Fix IE11 bug
+  }
 }
 
 /**
